Thu Dec 11 23:11:16 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubgstock.c, gnubgstock.h, gtkgame.c,
	gtktoolbar.c, play.c, set.c: minor changes to the end-game button.

Tue Dec  9 16:59:54 CET 2008 Christian Anthon <anthon@kiku.dk>

	* import.c: do not try to import failed formats
	* gtkfile.c: output not recognized format in batch analyse, when
	appropriate. Do not try to set non-valid files and directories in the
	file selection dialog (Savannah bug).

Tue Dec  9 14:03:52 CET 2008 Christian Anthon <anthon@kiku.dk>

	* analysis.c: fix a bug causing wrong luck stats in matches as reported on savannah 

Tue Dec  9 01:32:30 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, sound.c: missing frees

Mon Dec  8 22:22:19 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubgstock.c, gnubgstock.h, gtkgame.c,
	gtktoolbar.c, play.c, pixmaps/Makefile.am,
	pixmaps/gnubg-stock-pixbufs.h, pixmaps/16x16/actions/runit_16.png,
	pixmaps/24x24/actions/runit_24.png: Add a quickgame button

Mon Dec  8 21:29:12 CET 2008 Christian Anthon <anthon@kiku.dk>: 

	* gtkgame.c: UserCommand("set ..."); may have strange sideeffects
	through GTKSet, and cannot be used in edit_new

Dec  5 10:30:38 CET 2008 Christian Anthon <anthon@kiku.dk>: 

	* bearoff.c, bearoff.h: disable gmappedfile code when glib is old, and
	fix a bug causing a crash when mapping of the bearoffdb fails.

Thu Dec  4 23:11:23 CET 2008 Christian Anthon <anthon@kiku.dk>

	* file.c, gnubg.c, gtkcube.c, gtkgamelist.c: more minor memory errors

Wed Dec  3 12:06:57 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtktheory.c: remove missed debug stuff

Wed Dec  3 11:51:33 CET 2008 Christian Anthon <anthon@kiku.dk>

	* dice.c, dice.h, gnubg.c: free gmp random data
	* gtkboard.c: init bd->cube and remove unused widget from board_init
	* gtkgame.c: the list returned by gtk_container_get_children should be
	freed
	* gtkgamelist.c: widget destroy doesn't work (gtk bug)